src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Commission_Amount_Due__c</fullName>
        <label>Commission Amount Due</label>
        <summarizedField>Job_Assignment__c.Commission_Amount_Due__c</summarizedField>
        <summaryForeignKey>Job_Assignment__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Commission_Paid__c</fullName>
        <label>Commission Paid</label>
        <summarizedField>Job_Assignment__c.Commission_Paid__c</summarizedField>
        <summaryForeignKey>Job_Assignment__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Job_Completed__c</fullName>
        <label>Job Completed</label>
        <summaryFilterItems>
            <field>Job_Assignment__c.Job_Completed__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Job_Assignment__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Employees</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>Job_Completed__c</columns>
        <columns>Commission_Amount_Due__c</columns>
        <columns>Commission_Paid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>equals</operation>
            <value>Cleaning Company</value>
        </filters>
        <label>All Employees</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Customers</fullName>
        <active>true</active>
        <description>Standard Customer</description>
        <label>Customers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employees</fullName>
        <active>true</active>
        <description>All Employees are also Contacts</description>
        <label>Employees</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>